--- a/bio.html
+++ b/bio.html
@@ -12,7 +12,8 @@
     <li> Sofia (3 year old daughter)
     </ul>
   <h2>Pictures of my family</h2>
-    <img width="200" src="great-success.png" alt="Jim">
+	<img src = "kids.jpg" alt = "kids" />
+<img src = "Family.jpg" alt = "family" />
   <h2> My LinkedIn Profile </h2>
   <a href="https://www.linkedin.com/in/nina-anderson-914687/" target = "blank">LinkedIn</a>
 </body>
